feat: implement signup
