# server/src/routes/auth/dto.rs
@@ -4,8 +4,10 @@ use utoipa::ToSchema;
 use uuid::Uuid;
 use validator::Validate;
 
+use crate::db;
+
 #[derive(Deserialize, Validate, ToSchema)]
-pub(super) struct SignupRequest {
+pub(super) struct AuthRequest {
     #[validate(email(message = "must be a valid email address"))]
     pub email: String,
     #[validate(length(min = 8, max = 128, message = "must be between 8 and 128 characters"))]
@@ -13,10 +15,22 @@ pub(super) struct SignupRequest {
 }
 
 #[derive(Serialize, ToSchema)]
-pub(super) struct SignupResponse {
+pub(super) struct AuthResponse {
     pub id: Uuid,
     pub email: String,
     pub verified_at: Option<DateTime<Utc>>,
     pub created_at: DateTime<Utc>,
     pub updated_at: DateTime<Utc>,
+}
+
+impl From<db::users::User> for AuthResponse {
+    fn from(value: db::users::User) -> Self {
+        Self {
+            id: value.id,
+            email: value.email,
+            verified_at: value.verified_at,
+            created_at: value.created_at,
+            updated_at: value.updated_at,
+        }
+    }
 }
